<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal"
    android:background="@color/PureWhite" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Title"
                android:textSize="@dimen/MiddleTextHeight"
                android:textColor="@color/GrayText"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_Glance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Memo"
                android:textSize="@dimen/SmallTextHeight"
                android:textColor="@color/GrayText"
                android:maxLines="3" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_Edit"
            android:layout_width="@dimen/PlainIconWidth"
            android:layout_height="@dimen/PlainIconHeight"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_squre"
            android:text="@string/Edit"
            android:textColor="@color/GrayText"
            android:textSize="@dimen/SmallButtonTextHeight" />

    </LinearLayout>

</LinearLayout>